--- a/roles/customized_ami/tasks/create.yaml
+++ b/roles/customized_ami/tasks/create.yaml
@@ -19,7 +19,7 @@
 
 - name: Check that existing AMI found
   ansible.builtin.debug:
-    msg: "Existing AMI found with name: '{{ custom_ami_name }}'"
+    msg: "Existing AMI found with name: '{{ customized_ami_name }}'"
   when:
     - customized_ami__existing_amis.images | length > 0
-    - not (custom_ami_recreate_if_exists | bool)
+    - not (customized_ami_recreate_if_exists | bool)
