--- a/roles/customized_ami/tasks/create_ec2_resources.yaml
+++ b/roles/customized_ami/tasks/create_ec2_resources.yaml
@@ -1,22 +1,22 @@
 ---
 - name: Create a VPC to work in
   amazon.aws.ec2_vpc_net:
-    cidr_block: "{{ custom_ami_vpc_cidr }}"
-    name: "{{ custom_ami_vpc_name }}"
-    tags: "{{ custom_ami_resource_tags }}"
+    cidr_block: "{{ customized_ami_vpc_cidr }}"
+    name: "{{ customized_ami_vpc_name }}"
+    tags: "{{ customized_ami_resource_tags }}"
   register: customized_ami__vpc
 
 - name: Create a public subnet
   amazon.aws.ec2_vpc_subnet:
     vpc_id: "{{ customized_ami__vpc.vpc.id }}"
-    cidr: "{{ custom_ami_subnet_cidr }}"
-    tags: "{{ custom_ami_resource_tags }}"
+    cidr: "{{ customized_ami_subnet_cidr }}"
+    tags: "{{ customized_ami_resource_tags }}"
   register: customized_ami__subnet
 
 - name: Create internet gateway attached to the VPC
   amazon.aws.ec2_vpc_igw:
     vpc_id: "{{ customized_ami__vpc.vpc.id }}"
-    tags: "{{ custom_ami_resource_tags }}"
+    tags: "{{ customized_ami_resource_tags }}"
     state: present
   register: customized_ami__internet_gateway
 
@@ -34,9 +34,9 @@
 
 - name: Create security group allowing SSH connection
   amazon.aws.ec2_security_group:
-    name: "{{ custom_ami_security_group }}"
+    name: "{{ customized_ami_security_group }}"
     vpc_id: "{{ customized_ami__vpc.vpc.id }}"
-    description: "{{ custom_ami_security_group_desc }}"
+    description: "{{ customized_ami_security_group_desc }}"
     rules:
       - cidr_ip: 0.0.0.0/0
         proto: tcp
@@ -45,22 +45,22 @@
     rules_egress:
       - cidr_ip: 0.0.0.0/0
         proto: -1
-    tags: "{{ custom_ami_resource_tags }}"
+    tags: "{{ customized_amiresource_tags }}"
     state: present
   register: customized_ami__security_group
 
 - name: Create key pair to connect to the VM
   amazon.aws.ec2_key:
-    name: "{{ custom_ami_key_name }}"
-    key_material: "{{ lookup('file', custom_ami_public_key_file) }}"
-    tags: "{{ custom_ami_resource_tags }}"
+    name: "{{ customized_ami_key_name }}"
+    key_material: "{{ lookup('file', customized_amipublic_key_file) }}"
+    tags: "{{ customized_amiresource_tags }}"
 
 - name: Create a virtual machine
   amazon.aws.ec2_instance:
-    name: "{{ custom_ami_ec2_instance_name }}"
-    instance_type: "{{ custom_ami_ec2_instance_type }}"
+    name: "{{ customized_ami_ec2_instance_name }}"
+    instance_type: "{{ customized_ami_ec2_instance_type }}"
     image_id: "{{ customized_ami__source_ami_image_id }}"
-    key_name: "{{ custom_ami_key_name }}"
+    key_name: "{{ customized_ami_key_name }}"
     subnet_id: "{{ customized_ami__subnet.subnet.id }}"
     network:
       assign_public_ip: true
