--- a/roles/customized_ami/tasks/delete_ec2_resources.yaml
+++ b/roles/customized_ami/tasks/delete_ec2_resources.yaml
@@ -2,7 +2,7 @@
 - name: Get vpc information
   amazon.aws.ec2_vpc_net_info:
     filters:
-      tag:Name: "{{ custom_ami_vpc_name }}"
+      tag:Name: "{{ customized_ami_vpc_name }}"
   register: customized_ami__vpc
 
 - name: Delete EC2 resources
@@ -27,14 +27,14 @@
 
     - name: Delete key pair to connect to the VM
       amazon.aws.ec2_key:
-        name: "{{ custom_ami_key_name }}"
+        name: "{{ customized_ami_key_name }}"
         state: absent
 
     - name: List Security group from VPC
       amazon.aws.ec2_security_group_info:
         filters:
           vpc-id: "{{ customized_ami__vpc_id }}"
-          description: "{{ custom_ami_security_group_desc }}"
+          description: "{{ customized_ami_security_group_desc }}"
       register: customized_ami__security_groups
 
     - name: Delete security groups
@@ -65,7 +65,7 @@
 
     - name: Delete subnets
       amazon.aws.ec2_vpc_subnet:
-        cidr: "{{ custom_ami_subnet_cidr }}"
+        cidr: "{{ customized_ami_subnet_cidr }}"
         state: absent
         vpc_id: "{{ customized_ami__vpc_id }}"
 
