--- a/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
+++ b/tests/integration/targets/test_manage_transit_gateway/tasks/vpc_attachments.yml
@@ -6,13 +6,13 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.manage_transit_gateway
       vars:
-        action: "create"
-        transit_gateway:
+        manage_transit_gateway_action: "create"
+        manage_transit_gateway_transit_gateway:
           asn: 4200000000
           description: "TGW for Cloud team"
           tags:
             "team": "cloud"
-        vpc_attachment:
+        manage_transit_gateway_vpc_attachment:
           - name: "vpc-attachment-001"
             tags:
               "team": "cloud"
