--- a/playbooks/aws_restore_cloudtrail.yml
+++ b/playbooks/aws_restore_cloudtrail.yml
@@ -7,10 +7,10 @@
       ansible.builtin.include_role:
         name: cloud.aws_ops.awsconfig_multiregion_cloudtrail
       vars:
-        operation: create
-        bucket_name: "{{ s3_bucket_name }}"
-        key_prefix: "{{ s3_key_prefix | default(omit) }}"
-        trail_name: "{{ cloudtrail_name }}"
+        awsconfig_multiregion_cloudtrail_operation: create
+        awsconfig_multiregion_cloudtrail_bucket_name: "{{ s3_bucket_name }}"
+        awsconfig_multiregion_cloudtrail_key_prefix: "{{ s3_key_prefix | default(omit) }}"
+        awsconfig_multiregion_cloudtrail_trail_name: "{{ cloudtrail_name }}"
 
     - name: Include 'cloud.aws_ops.enable_cloudtrail_encryption_with_kms' role
       ansible.builtin.include_role:
