--- a/roles/manage_transit_gateway/meta/argument_specs.yaml
+++ b/roles/manage_transit_gateway/meta/argument_specs.yaml
@@ -54,7 +54,7 @@ argument_specs:
         elements: dict
         options:
           vpc_id:
-            description: Te VPC id for which the route should be added.
+            description: The VPC id for which the route should be added.
             type: str
           cidr_block:
             description: Destination CIDR block.
