--- a/galaxy.yml
+++ b/galaxy.yml
@@ -20,6 +20,7 @@ dependencies:
   amazon.aws: '>=5.1.0'
   community.aws: '>=5.0.0'
   amazon.cloud: '>=0.4.0'
+  community.libvirt: '>=1.2.0'
 version: 1.0.3
 build_ignore:
   - .DS_Store
