--- a/playbooks/move_vm_from_on_prem_to_aws/move_vm_from_on_prem_to_aws.yml
+++ b/playbooks/move_vm_from_on_prem_to_aws/move_vm_from_on_prem_to_aws.yml
@@ -16,7 +16,7 @@
     - name: Add host to inventory
       ansible.builtin.add_host:
         name: "{{ kvm_host.name }}"
-        ansible_host: "{{ kvm_host.ip }}"
+        ansible_host: "{{ kvm_host.ansible_host }}"
         ansible_user: "{{ kvm_host.ansible_user }}"
         ansible_ssh_common_args: -o "UserKnownHostsFile=/dev/null" -o StrictHostKeyChecking=no -i {{ kvm_host.ansible_ssh_private_key_file }}
         groups: "{{ kvm_host.groups }}"
