--- a/playbooks/move_vm_from_on_prem_to_aws/vars/main.yml
+++ b/playbooks/move_vm_from_on_prem_to_aws/vars/main.yml
@@ -8,7 +8,7 @@ instance_type: "t2.micro"
 uri: "qemu:///system"
 kvm_host:
   name: kvm
-  ip: 192.168.1.117
+  ansible_host: 192.168.1.117
   ansible_user: vagrant
   ansible_ssh_private_key_file: ~/.ssh/id_rsa.pub
   groups: "libvirt"
