--- a/playbooks/move_vm_from_on_prem_to_aws/move_vm_from_on_prem_to_aws.yml
+++ b/playbooks/move_vm_from_on_prem_to_aws/move_vm_from_on_prem_to_aws.yml
@@ -25,18 +25,23 @@
       ansible.builtin.import_role:
         name: cloud.aws_ops.clone_on_prem_vm
       vars:
-        clone_on_prem_vm_source_vm_name: "{{ on_prem_source_vm_name }}"
-        clone_on_prem_vm_dest_vm_name: "{{ on_prem_vm_clone_name }}"
-        clone_on_prem_vm_uri: "{{ uri }}"
-        clone_on_prem_vm_local_image_path: "{{ local_image_path }}"
+        clone_on_prem_vm_source_vm_name: "{{ clone_on_prem_vm_source_vm_name }}"
+        clone_on_prem_vm_dest_vm_name: "{{ clone_on_prem_vm_dest_vm_name }}"
+        clone_on_prem_vm_uri: "{{ clone_on_prem_vm_uri }}"
+        clone_on_prem_vm_local_image_path: "{{ clone_on_prem_vm_local_image_path }}"
+        clone_on_prem_vm_overwrite: "{{ clone_on_prem_vm_overwrite }}"
       delegate_to: kvm
 
     - name: Import 'cloud.aws_ops.import_image_and_run_aws_instance' role
       ansible.builtin.import_role:
         name: cloud.aws_ops.import_image_and_run_aws_instance
       vars:
-        import_image_and_run_aws_instance_bucket_name: "{{ s3_bucket_name }}"
-        import_image_and_run_aws_instance_image_path: "{{ clone_on_prem_vm_local_image_path }}"
-        import_image_and_run_aws_instance_instance_name: "{{ instance_name }}"
-        import_image_and_run_aws_instance_instance_type: "{{ instance_type }}"
-        import_image_and_run_aws_instance_import_image_task_name: "{{ import_task_name }}"
+        import_image_and_run_aws_instance_bucket_name: "{{ import_image_and_run_aws_instance_bucket_name }}"
+        import_image_and_run_aws_instance_image_path: "{{ import_image_and_run_aws_instance_image_path }}"
+        import_image_and_run_aws_instance_instance_name: "{{ import_image_and_run_aws_instance_instance_name }}"
+        import_image_and_run_aws_instance_instance_type: "{{ import_image_and_run_aws_instance_instance_type }}"
+        import_image_and_run_aws_instance_import_image_task_name: "{{ import_image_and_run_aws_instance_import_image_task_name }}"
+        import_image_and_run_aws_instances_keypair_name: "{{ import_image_and_run_aws_instances_keypair_name }}"
+        import_image_and_run_aws_instance_security_groups: "{{ import_image_and_run_aws_instance_security_groups }}"
+        import_image_and_run_aws_instance_vpc_subnet_id: "{{ import_image_and_run_aws_instance_vpc_subnet_id }}"
+        import_image_and_run_aws_instance_volumes: "{{ import_image_and_run_aws_instance_volumes }}"
