--- a/roles/backup_create_plan/vars/main.yaml
+++ b/roles/backup_create_plan/vars/main.yaml
@@ -1,5 +1,5 @@
 ---
-hourly_backup:  # Hourly continous backup at :15 with 7-day retention
+backup_create_plan_hourly_backup:  # Hourly continous backup at :15 with 7-day retention
   rule_name: hourly
   target_backup_vault_name: "{{ vault_name }}"
   schedule_expression: "cron(15 * ? * * *)"
@@ -9,12 +9,12 @@ hourly_backup:  # Hourly continous backup at :15 with 7-day retention
   lifecycle:
     delete_after_days: 7
 
-daily_backup:  # Daily backup at 5am UTC with Amazon defaults for all other settings
+backup_create_plan_backup_create_plan_daily_backup:  # Daily backup at 5am UTC with Amazon defaults for all other settings
   rule_name: daily
   target_backup_vault_name: "{{ vault_name }}"
   schedule_expression: "cron(0 5 ? * * *)"
 
-weekly_backup:  # Weekly backup on Mondays at 5am UTC with 90 day retention after quick transition to cold storage
+backup_create_plan_weekly_backup:  # Weekly backup on Mondays at 5am UTC with 90 day retention after quick transition to cold storage
   rule_name: weekly
   target_backup_vault_name: "{{ vault_name }}"
   schedule_expression: "cron(0 5 ? * MON *)"
@@ -22,7 +22,7 @@ weekly_backup:  # Weekly backup on Mondays at 5am UTC with 90 day retention afte
     delete_after_days: 91
     move_to_cold_storage_after_days: 1
 
-monthly_backup:  # Monthly backup at 5am UTC on 1st of month with copy to additional vault
+backup_create_plan_monthly_backup:  # Monthly backup at 5am UTC on 1st of month with copy to additional vault
   rule_name: monthly
   target_backup_vault_name: "{{ vault_name }}"
   schedule_expression: "cron(0 5 1 * ? *)"
